Closed Bug 203387 Opened 21 years ago Closed 21 years ago

warning: cannot pass objects of type `NS_ConvertUCS2toUTF8' through `...'

Categories

(Core Graveyard :: File Handling, defect)

x86
BeOS
defect
Not set
trivial

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file)

/swap/BEOS/mozilla/uriloader/exthandler/beos/nsOSHelperAppService.cpp: In method
`nsresult nsOSHelperAppService::GetFileTokenForPath(const PRUnichar *, class
nsIFile **)':
/swap/BEOS/mozilla/uriloader/exthandler/beos/nsOSHelperAppService.cpp:332:
warning: cannot pass objects of type `NS_ConvertUCS2toUTF8' through `...'
Attached patch .get()Splinter Review
Attachment #121715 - Flags: superreview?(bzbarsky)
Attachment #121715 - Flags: review?(bsmedberg)
Comment on attachment 121715 [details] [diff] [review]
.get()

ja, ja.

I find it hard to believe that was just a warning...
Attachment #121715 - Flags: review?(bsmedberg) → review+
Attachment #121715 - Flags: superreview?(bzbarsky) → superreview+
Comments
http://bugzilla.mozilla.org/show_bug.cgi?id=145860#c36
and below - discussion with Boris, which partially remained outside BugZilla

Problem seems appeared not only in LOG()s
checked in
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: