Bug 203387 warning: cannot pass objects of type `NS_ConvertUCS2toUTF8' through `...' r=bsmedberg sr=bz